Fixed slider visibility issue in Chrome

--- a/webapp/dip/static/assets/css/px-form.css
+++ b/webapp/dip/static/assets/css/px-form.css
@@ -179,7 +179,7 @@
 .box__range {
     -webkit-appearance: none;
     width: 100%;
-    height: 15px;
+    height: 5px;
     border-radius: 5px;
     outline: none;
     opacity: 0.7;
@@ -187,6 +187,7 @@
     transition: opacity .2s;
     padding: 0;
     margin: 0;
+    background: #4d4c4c;
 }
 
 .box__range::-webkit-slider-thumb {
@@ -207,6 +208,13 @@
     background: #fff;
     cursor: pointer;
     border: 2px solid #01bffd;
+}
+
+.box__range::-moz-range-progress {
+    height: 5px;
+    background: #01bffd;
+    border: 0;
+    margin-top: 0;
 }
 
 .box__config {
